Adding basic and special moves

--- a/Descent into Midnight/DescentIntoMidnight.css
+++ b/Descent into Midnight/DescentIntoMidnight.css
@@ -172,11 +172,17 @@ input[disabled] {-moz-appearance: textfield}
 }
 
 .sheet-statistics .sheet-pronoun {
-	width: 35%;
+	width: 30%;
+}
+
+
+.sheet-statistics .sheet-corruption,
+.sheet-statistics .sheet-harmony {
+	width: 23%;
 }
 
 .sheet-statistics input[type="text"] {
-	width: 10em;
+	width: 9em;
 }
 
 .sheet-statistics .sheet-header {
@@ -196,10 +202,6 @@ input[disabled] {-moz-appearance: textfield}
 	width: 1em;
 }
 
-.sheet-statistics .sheet-corruption,
-.sheet-statistics .sheet-harmony {
-	width: 25%;
-}
 
 .sheet-statistics .sheet-header:last-child {
 	margin-right: 0;
@@ -296,9 +298,16 @@ span.sheet-description-name {
 
 /* ===== BASIC AND SPECIAL MOVES ===== */
 
-span.sheet-basicmove-name {
+
+span.sheet-basicmove-name,
+span.sheet-specialmove-name {
 	font-weight: bold;
 	font-size: large;
+}
+
+label.sheet-question-label {
+	font-size: inherit;
+	font-weight: inherit;
 }
 
 /* ===== UTILITY ===== */
