Building roll templates

--- a/Descent into Midnight/DescentIntoMidnight.css
+++ b/Descent into Midnight/DescentIntoMidnight.css
@@ -181,6 +181,10 @@ input[disabled] {-moz-appearance: textfield}
 	width: 23%;
 }
 
+.sheet-statistics .sheet-ongoing {
+	width: 16%
+}
+
 .sheet-statistics input[type="text"] {
 	width: 9em;
 }
@@ -308,6 +312,21 @@ span.sheet-specialmove-name {
 label.sheet-question-label {
 	font-size: inherit;
 	font-weight: inherit;
+	margin-bottom: inherit;
+}
+
+button.sheet-inlinebutton {
+	background: inherit;
+	border: inherit;
+}
+
+/* ===== Roll Template ===== */
+
+.sheet-rolltemplate-basic .sheet-container {
+	background-color: #ffffff;
+    border: 1px solid;
+    padding: 2px;
+    width: 189px;
 }
 
 /* ===== UTILITY ===== */
@@ -335,20 +354,4 @@ label.sheet-question-label {
 
 .sheet-section-moves select {
 	width: 18%;
-}
-
-.sheet-section-spells input[name="attr_spellname"] {
-	width: 95%;
-}
-
-
-
-.sheet-section-gear input[name="attr_itemtags"] {
-	width: 85%;
-	float: left;
-}
-
-.sheet-section-gear input[name="attr_itemweight"] {
-	width: 15%;
-	float: left;
 }
