Fixed the rolls

--- a/Descent into Midnight/DescentIntoMidnight.css
+++ b/Descent into Midnight/DescentIntoMidnight.css
@@ -315,19 +315,35 @@ label.sheet-question-label {
 	margin-bottom: inherit;
 }
 
-button.sheet-inlinebutton {
+button.sheet-inlinebutton[type="roll"] {
 	background: inherit;
 	border: inherit;
+	font-size: 1.1em;
 }
 
 /* ===== Roll Template ===== */
 
-.sheet-rolltemplate-basic .sheet-container {
-	background-color: #ffffff;
-    border: 1px solid;
+.sheet-rolltemplate-dim .sheet-container {
+	background-color: skyblue;
+    border: 2px solid;
     padding: 2px;
-    width: 189px;
+    width: 95%;
 }
+
+.sheet-rolltemplate-dim .sheet-container .sheet-template-header {
+	margin: 0.5em 0;
+	font-weight: bold;
+	color: navy;
+	font-size: 1.2em;
+	line-height: 20px;
+	font-variant: small-caps;
+}
+
+.sheet-rolltemplate-dim .sheet-container .sheet-template-row {
+	border-top: 1px solid black;
+	padding: 0.5em 0 0.2em;
+}
+
 
 /* ===== UTILITY ===== */
 .sheet-clearfix {
