Basic Moves done
Still need to do special

--- a/Descent into Midnight/DescentIntoMidnight.css
+++ b/Descent into Midnight/DescentIntoMidnight.css
@@ -264,8 +264,12 @@ input[disabled] {-moz-appearance: textfield}
 }
 
 .sheet-attributes .sheet-header button[type="roll"] {
-	width: 90%;
 	height: auto;
+	width: 90%;
+	background-color: inherit;
+	color: #DDD;
+	box-shadow: none;
+	border: none;
 }
 
 .sheet-attributes .sheet-row-1 input {
@@ -286,6 +290,7 @@ input[disabled] {-moz-appearance: textfield}
 
 .sheet-attributes .sheet-row-2 label {
 	color: #DDD;
+	display: inline;
 }
 
 .sheet-attributes .sheet-row-2 input {
@@ -326,24 +331,34 @@ button.sheet-inlinebutton[type="roll"] {
 .sheet-rolltemplate-dim .sheet-container {
 	background-color: skyblue;
     border: 2px solid;
-    padding: 2px;
     width: 95%;
 }
 
 .sheet-rolltemplate-dim .sheet-container .sheet-template-header {
-	margin: 0.5em 0;
+	padding: 0.5em 0;
 	font-weight: bold;
-	color: navy;
+	color: white;
 	font-size: 1.2em;
 	line-height: 20px;
 	font-variant: small-caps;
+	background-color: #012998;
+	padding-left: 2px;
 }
 
 .sheet-rolltemplate-dim .sheet-container .sheet-template-row {
 	border-top: 1px solid black;
-	padding: 0.5em 0 0.2em;
+	padding: 0.5em 0 0.2em 2px;
 }
 
+.sheet-rolltemplate-dim .sheet-container div.sheet-roll,
+.sheet-rolltemplate-dim .sheet-container div.sheet-hit {
+	background-color: #DBE5FF;
+}
+
+.sheet-rolltemplate-dim .sheet-container div.sheet-partial,
+.sheet-rolltemplate-dim .sheet-container div.sheet-miss {
+	background-color: #A9C0FF;
+}
 
 /* ===== UTILITY ===== */
 .sheet-clearfix {
