--- a/Forbidden_Lands/Forbidden_Lands.css
+++ b/Forbidden_Lands/Forbidden_Lands.css
@@ -238,6 +238,12 @@ hr.sheet-horizontal-rule::before {
   text-align: center;
 }
 
+span.sheet-readonly {
+  font-size: 2em;
+  justify-self: center;
+  line-height: .85em;
+}
+
 /* Hide actual radio */
 input.sheet-skull[type="radio"] {
   position: relative;
@@ -2349,13 +2355,17 @@ input.sheet-conditions-cold:checked~div>span.sheet-conditions-cold {
 }
 
 /* ---------------------------------- Skills */
+.sheet-skills-row select.sheet-input, .sheet-skills-row input.sheet-input-number {
+  min-width: 2.5em;
+}
+
 .sheet-skills-grid>span {
   position: relative;
   display: grid;
   padding: 1px 0 1px 0;
   grid-column-gap: 2px;
   grid-row-gap: 0;
-  grid-template-columns: auto 3em 3em 3em;
+  grid-template-columns: auto 2.5em 2.5em 2.5em 2.5em;
 }
 
 .sheet-skills-grid>span>div {
@@ -2371,7 +2381,7 @@ input.sheet-conditions-cold:checked~div>span.sheet-conditions-cold {
 }
 
 .sheet-skills-box1 {
-  grid-column: 1/5;
+  grid-column: 1/6;
   grid-row-start: 1;
 }
 
@@ -2390,8 +2400,13 @@ input.sheet-conditions-cold:checked~div>span.sheet-conditions-cold {
   grid-row-start: 1;
 }
 
+.sheet-skills-box5 {
+  grid-column-start: 5;
+  grid-row-start: 1;
+}
+
 .sheet-skills-row .sheet-skills-row2 {
-  grid-column: 1/5;
+  grid-column: 1/6;
   grid-row-start: 2;
   grid-template-columns: 100%;
 }
@@ -2409,29 +2424,29 @@ input.sheet-conditions-cold:checked~div>span.sheet-conditions-cold {
   grid-template-columns: auto 2em 2em 2em 2em;
 }
 
-.sheet-skills-box5 {
+.sheet-skills-box6 {
   grid-column-start: 1;
   grid-row-start: 1;
   padding: 0px 0 4px 0;
   margin: -15px 0 0 0;
 }
 
-.sheet-skills-box6 {
+.sheet-skills-box7 {
   grid-column-start: 2;
   grid-row-start: 1;
 }
 
-.sheet-skills-box7 {
+.sheet-skills-box8 {
   grid-column-start: 3;
   grid-row-start: 1;
 }
 
-.sheet-skills-box8 {
+.sheet-skills-box9 {
   grid-column-start: 4;
   grid-row-start: 1;
 }
 
-.sheet-skills-box9 {
+.sheet-skills-box10 {
   grid-column-start: 5;
   grid-row-start: 1;
 }
