updated skills with misc gear mod attribute - needs sheetworker

--- a/Forbidden_Lands/Forbidden_Lands.css
+++ b/Forbidden_Lands/Forbidden_Lands.css
@@ -33,7 +33,7 @@ input.sheet-announcements-show {
   font-size: 1em;
   position: relative;
   float: right;
-  margin: 0.5em -3em 0 0;
+  margin: 0.5em 0 0 0;
 }
 
 input[type="checkbox"].sheet-announcements-older-show {
@@ -238,10 +238,15 @@ hr.sheet-horizontal-rule::before {
   text-align: center;
 }
 
-span.sheet-readonly {
+span.sheet-readonly,
+input.sheet-monster_only:checked~div.sheet-character .sheet-monster+span.sheet-monster.sheet-readonly {
   font-size: 2em;
   justify-self: center;
   line-height: .85em;
+  width: 1em;
+  display: flex;
+  justify-content: center;
+  padding: 2px 0 0 0;
 }
 
 /* Hide actual radio */
