--- a/Descent into Midnight/DescentIntoMidnight.css
+++ b/Descent into Midnight/DescentIntoMidnight.css
@@ -181,7 +181,7 @@ input[disabled] {-moz-appearance: textfield}
 	width: 23%;
 }
 
-.sheet-statistics .sheet-ongoing {
+.sheet-statistics .sheet-maneuvers {
 	width: 16%
 }
 
