--- a/DeltaGreenRPG/delta_green.css
+++ b/DeltaGreenRPG/delta_green.css
@@ -1,3 +1,15 @@
+/* Fix for firefox */
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type=number] {
+    -moz-appearance:textfield;
+}
+/* */
+
 .sheet-clear {
     clear:both;
 }
@@ -76,17 +88,6 @@ select option {
 			box-shadow: inset 0px 0px 55px 25px #d2cac3;
 		} 
 		
-input.sheet-derivedStat {
-	width: 37px;
-	text-align: center;
-	/*background-color: white;*/
-	/*background-color: transparent;*/
-	background-image: url("http://i.imgur.com/e1Cfspj.png");
-	color: black;
-	font-weight: bold;
-}
-
-
 .charsheet .sheet-cdiv {
     width:810px;
     /*border: 1px dotted;*/
@@ -149,7 +150,7 @@ h3.sheet-sectionHeader {
 	text-align:center; 
 	background-color: black; 
 	color: white; 
-	border-radius: 5px;
+	border-radius: 0;
 }
 
 .sheet-subsubsectionHeader {
@@ -253,6 +254,10 @@ td.sheet-sidetitle:last-child,
 
 table.sheet-generaltable{
     border:none;
+    border-style:hidden;
+    align:right;
+    padding:0;
+    margin:0;
 }
 table.sheet-generaltable tr:first-child{
     border-top:none;
@@ -281,9 +286,11 @@ table.sheet-skilltable tr td{
     border-bottom: none;
     border-top: none;
 }
-table.sheet-skilltable tr td:first-child{
+table.sheet-skilltable tr td:first-child,
+table.sheet-skilltable tr td:nth-child(4),
+table.sheet-skilltable tr td:nth-child(7){
     text-align:left;
-    padding: 5px;
+    padding-left: 5px;
     position:relative;
 }
 table.sheet-skilltable tr,
@@ -331,14 +338,17 @@ table.sheet-attacktable {
 			height: 1380px;
 			width: 870px;
             padding: 0px;
-            background-color: transparent;
-            background-image: url('https://i.imgur.com/mMgftma.jpg'); 
+            background-color: white;
+
+            background-image: url('img/folder.jpg'); 
          	background-repeat: no-repeat;
             background-size: 860px 1370px;
             position: relative;
 			/*transform:translate3d(0,0,0);
             perspective: 2000px;*/
             display:flex;
+            
+            scrollbar-width: none;
             
 }
 .sheet-main{
@@ -350,6 +360,8 @@ table.sheet-attacktable {
 			transform:translate3d(0,0,0);
             perspective: 2000px;
             display:flex;
+            
+            scrollbar-width: none;
     
 }
 .sheet-side1{
@@ -365,16 +377,35 @@ table.sheet-attacktable {
 }
 .sheet-paper {
 		background-color: transparent;
-		background-image: url('http://i.stack.imgur.com/kb0Zm.jpg');
-    	background-size: 102% 103%;
+		background-image: url('img/paper.jpg');
+    	background-size: cover;
         background-repeat: no-repeat;
         /*background-attachment: fixed;*/
         background-position: left; 
         background-origin: content-box;
         	margin: 1px 1px 1px 1px;
 			padding: 1% 1% 1% 1%;
-		height:100%;
-			 overflow: hidden;
+		height:102%;
+        overflow-y: auto;
+            
+            scrollbar-width: none;
+}
+.sheet-paper1 {
+		background-color: transparent;
+		background-image: url('img/paper.jpg');
+		/*debug background-color: blue;*/
+    	background-size: cover;
+        background-repeat: no-repeat;
+        /*background-attachment: fixed;*/
+        background-position: left; 
+        background-origin: content-box;
+        	margin: 1px 1px 1px 1px;
+			padding: 1% 1% 1% 1%;
+		height:97%;
+        overflow-y: auto;
+            
+            scrollbar-width: none;
+
 }
 .sheet-divide{
   content: "";
@@ -399,9 +430,13 @@ table.sheet-attacktable {
 			text-align: center;
 			top: 2%;
 			left: -10%;
+			
+            
+            scrollbar-width: none;
 }
 .sheet-container {
-			height: 98%;
+			height: 100%;
+
 			width: 100%;
 			float: center;
 			flex-shrink: 1;
@@ -410,6 +445,9 @@ table.sheet-attacktable {
 			perspective: 2000px;
 			position: relative;
 			display: inline-block;
+			
+            
+            scrollbar-width: none;
 }
 /* Switch between PC/NPC  */
 
@@ -419,16 +457,25 @@ table.sheet-attacktable {
     opacity: 0;
 	max-height:0;
 	overflow: hidden;*/
-	height: 100%;
+
 	width: 98%;
 	display: none;
     float: center;
     margin: 5px 0px 5px 0px;
     overflow: hidden;
+    
+    scrollbar-width: none;
 }
 
 
-
+.sheet-npc{
+    
+	height: 100%;
+}
+.sheet-player{
+    
+	height: 98%;
+}
 /* new stuff */
 
 .charsheet input.sheet-switch-sheet {
@@ -450,6 +497,15 @@ table.sheet-attacktable {
 	z-index: 9999;
 	top: -30%;
 }
+
+ input.sheet-switch-page2 {
+    float: center;
+    cursor: pointer;	
+	position: relative;
+	opacity: 0;
+	z-index: 9999;
+	top: -30%;
+}
  .sheet-switch-page:hover {
    background-color: hsl(120, 100%, 25%,0.4);
 }
@@ -462,7 +518,7 @@ table.sheet-attacktable {
     color:white;
 	font-weight: bold;
 	margin-left: -90%;
-	background-image: url("https://i.imgur.com/mA0oE5J.png");
+	background-image: url("img/Agent.png");
 	background-size: 100% 100%;
     background-repeat: no-repeat;
     /*background-attachment: fixed;*/
@@ -472,17 +528,8 @@ table.sheet-attacktable {
 
 
 .charsheet input.sheet-switch-sheet:checked ~ span.sheet-is-npc-tab{
-	background-image: url("https://i.imgur.com/iuMGFuB.png");
-	background-size: 100% 100%;
-    background-repeat: no-repeat;
-    /*background-attachment: fixed;*/
-    background-position: center; 
-    background-origin: content-box;
-}
-
-
- input[type=radio].sheet-switch-page+ span.sheet-is-npc-tab{
-	background-image: url(https://cf.geekdo-images.com/opengraph/img/-SlgzTqrBYMqWpvl-0SOVbKKqKk=/fit-in/1200x630/pic3982878.png);
+	background-image: url("img/Threat.jpg");
+	/*debug background-color: black;*/
 	background-size: 100% 100%;
     background-repeat: no-repeat;
     /*background-attachment: fixed;*/
@@ -503,7 +550,72 @@ input.sheet-is-npc:not(:checked ) ~  .sheet-player
 
 
 /* Correction two columns */
+.sheet-column {
+  border-style: solid;
+  border-color: black;
+  margin: 0 auto;
+  padding: 0;
+  display:flex;
+}
+.sheet-colspace {
+  border-style: none;
+  margin: 0 auto;
+  padding: 0;
+  width: 2%;
+}
 
+.sheet-left {
+    flex: 1 1;
+    /*padding-right:5px;*/
+  /*width:45%; */
+  
+}
+
+.sheet-right {
+    flex: 1 1;
+    /*padding-left:5px;*/
+  /*margin-left:1%;*/
+  /*width:45%; */
+}
+
+.sheet-clateral{
+  width: 5%;
+  display:flex;
+  background-color:black;
+  justify-content: center;
+  /* align-self: center; */
+  align-items: center;
+}
+.sheet-clateral1{
+  width: 5%;
+  display:flex;
+  background-color:black;
+  justify-content: left;
+  /* align-self: center; */
+  align-items: flex-end;
+}   
+.sheet-cmain{
+  height:100%;
+  flex:; 1;
+}
+
+/* Clear floats after the columns */
+/*.sheet-row :after {*/
+.sheet-row {
+  /*content: "";*/
+ /* clear: both;*/
+}
+.sheet-maindiv{
+  /*border-style: solid; debug*/
+  border-style: none; /*production*/
+  /*display: table;*/
+  margin-left:2%;
+  overflow: hidden;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: stretch ;
+}
 /* Text rotation 90 degree simple css */
 
 .sheet-rotation-wrapper-outer {
@@ -514,17 +626,60 @@ input.sheet-is-npc:not(:checked ) ~  .sheet-player
   height: 0;
 }
 .sheet-verticaltext{
-  display: block;
-  transform-origin: center;
+  display: inline-block;
+
+  /*transform-origin: center;*/
   text-align:center;
-  -ms-transform: rotate(-90deg); /* IE 9 */
-  -webkit-transform: rotate(-90deg); /* Safari */
-  transform: rotate(-90deg); 
+  width:100%;
+  vertical-align: middle;
+  text-align: left;
+  display: inline-block;
+  transform: rotate(-90deg);
+  white-space: nowrap;
+  transform-origin: center center;
   /* Not vital, but possibly a good idea if the element you're rotating contains
      text and you want a single long vertical line of text and the pre-rotation
      width of your element is small enough that the text wraps: */
+
+  margin-bottom: -50%;
+}
+.sheet-verticaltext2{
+  display: inline-block;
+  /*transform-origin: center;*/
+  text-align:center;
+  width:100%;
+  vertical-align: middle;
+  text-align: left;
+  display: inline-block;
+
+
+  transform: rotate(-90deg);
   white-space: nowrap;
-  margin-bottom:-50%;
+  transform-origin: center center;
+  /* Not vital, but possibly a good idea if the element you're rotating contains
+     text and you want a single long vertical line of text and the pre-rotation
+     width of your element is small enough that the text wraps: */
+
+  margin-bottom: -200%;
+}
+
+.sheet-verticaltext1{
+  display: inline-block;
+  /*transform-origin: center;*/
+  text-align:center;
+  width:100%;
+  vertical-align: middle;
+  text-align: left;
+  display: inline-block;
+  transform: rotate(-90deg);
+  transform-origin: center center;
+  white-space: nowrap;
+  /* Not vital, but possibly a good idea if the element you're rotating contains
+     text and you want a single long vertical line of text and the pre-rotation
+     width of your element is small enough that the text wraps: */
+
+  margin-bottom: 50%;
+
 }
 
 
@@ -533,22 +688,44 @@ input.sheet-is-npc:not(:checked ) ~  .sheet-player
 
 .sheet-fixedarea
 {
-    height: 114px;
-    overflow-y: auto;
+    height: 117.5px;
+    /*overflow-y: auto;*/
+    /*firefox*/
+  overflow-y: scroll;
+  scrollbar-width: none;
+  border:none;
 }
 .sheet-fixedarea_combat
 {
     height: 30%;
-    overflow-y: auto;
+    /*overflow-y: auto;*/
     vertical-align:top;
+    /*firefox*/
+  overflow-y: scroll;
+  scrollbar-width: none;
 }
 
 .sheet-fixedarea_skill
 {
-    height: 40%;
-    overflow-y: auto;
+    /*height: 223px;*/
+    height:180px;
+
+    /*overflow-y: auto;*/
+    /*firefox*/
+  overflow-y: scroll;
+  scrollbar-width: none;
+  border:none;
+  float:top;
 }
 
+
+
+::-webkit-scrollbar {
+  display: none;
+    width: 0px;  /* remove scrollbar space */
+    background: transparent; 
+}
+/*
 ::-webkit-scrollbar {
     width: 0px;
     height: 15px;
@@ -562,6 +739,7 @@ input.sheet-is-npc:not(:checked ) ~  .sheet-player
     height: 30px;
     background-color: black;
 }
+*/
 
 
 
@@ -585,15 +763,18 @@ input[type="number"].sheet-totalmod:read-only{
     font-weight:bold;
 }
 .sheet-difficultytab{
-    width:100%;
+
     
-  display: flex;
-  height: 100%;
-  justify-content: center;
+  justify-content: top;
+
+
+
   align-items: center;
 }
 .sheet-difficultytab input[type="radio"],
-.sheet-difficultytab input[type="checkbox"]{
+.sheet-difficultytab input[type="checkbox"],
+.sheet-subadapt input[type="radio"],
+.sheet-subadapt input[type="checkbox"],{
     display:none;
 }
 .sheet-difficultytab td,
@@ -622,23 +803,28 @@ height:30px;
 }
 .sheet-difficultytab table{
     position:relative;
-    border: 1px solid black;
+    border: 0px solid black;
+
 }
 .sheet-difficultytab td label{
     float: left;
     width: 100%;
-    margin: 5px 0px 7px 0px;
+    margin: 0px 0px 0px 0px;
     overflow:hidden;
 } 
 .sheet-difficultytab label{
   white-space: nowrap;
-    width: 7px;
+
 }    
 .sheet-adapt label,
-.sheet-difficultytab label,{
+.sheet-difficultytab label,
+.sheet-maindiv label{
     height: 20px;
     vertical-align:middle;
-    padding:5px 0px 0px 3px;
+    padding:0px 0px 0px 0px;
+}
+.sheet-adapt,
+.sheet-difficultytab{
 }
 
 table.sheet-subadapt,
@@ -681,7 +867,8 @@ table.sheet-subadapt,
     width: 12px;
   white-space: nowrap;
 }      
-.sheet-adapt input[type="checkbox"] + span::before{;
+.sheet-adapt input[type="checkbox"] + span::before,
+.sheet-adapt input[type="radio"] + span::before{
     color: green;
     height:30px;
     content: "△";  
@@ -691,7 +878,8 @@ table.sheet-subadapt,
     text-align:center;
  
 }	
-.sheet-adapt input[type="checkbox"]:checked + span::before{
+.sheet-adapt input[type="checkbox"]:checked + span::before,
+.sheet-adapt input[type="radio"]:checked + span::before{
     content: "▲";
 }
 /* BUTTON RELATED PROPERTIES */
@@ -720,7 +908,7 @@ table.sheet-subadapt,
 
 .sheet-buttonfull{
     vertical-align:middle;
-    overflow: hidden;
+    overflow: hidden; 
 }
 .sheet-buttonstat {
   display: inline-block;
@@ -999,6 +1187,8 @@ button[type=roll].sheet-gm-roll {
 			position: absolute;
 			
 			 overflow: hidden;
+            
+            scrollbar-width: none;
 		}
         .sheet-flipper{
         	transition: 1.2s;
@@ -1006,6 +1196,9 @@ button[type=roll].sheet-gm-roll {
         
         	position: relative;
         	height:100%;
+        	
+            
+            scrollbar-width: none;
             
         }
 		.sheet-front {
@@ -1018,9 +1211,10 @@ button[type=roll].sheet-gm-roll {
         	transform: rotateY(180deg);
 		}
 /*
-		.sheet-card:hover  .sheet-flipper {
-			transform:  rotateY( -180deg );
-		}
+
+
+
+
 */
         .sheet-agentflip{
             display:none;
@@ -1127,4 +1321,54 @@ input[type=text]{
 
 input.sheet-nolight:hover{
     background-color: transparent;
+}
+
+
+/* Internal table */
+table.sheet-internal {
+    border-collapse: collapse;
+    border-style: hidden;
+    overflow:hidden;
+}
+table.sheet-internal td, table th {
+    border: 1px solid black;
+}
+table.sheet-internal tr:first-child th {
+    border-top: none;
+}
+table.sheet-internal tr:last-child td {
+    border-bottom: none;
+    text-align:center;
+}
+}
+table.sheet-internal tr td:first-child,
+table.sheet-internal tr th:first-child {
+    border-left: none;
+}
+table.sheet-internal tr td:last-child,
+table.sheet-internal tr th:last-child {
+    border-right: none;
+}
+
+
+
+.sheet-div-table {
+  display: table;         
+  width: auto;                
+  border: 1px solid #666666;         
+  border-spacing: 5px; /* cellspacing:poor IE support for  this */
+}
+.sheet-div-table-row {
+  display: table-row;
+  clear: both;
+}
+.sheet-div-table-col {
+  float: left; /* fix for  buggy browsers */
+  display: table-column;   
+}
+.sheet-mytextarea{
+ display: block;
+ width: 100%;
+ height: 100%;
+ border: 0;
 }
