css font import correction

--- a/DnD_Original D&D/DnD_OD&D.css
+++ b/DnD_Original D&D/DnD_OD&D.css
@@ -6,11 +6,12 @@
 ***   FONTS   ***
 ****************/
 
-/* @import url('https://fonts.googleapis.com/css2?family=Special+Elite&family=Sue+Ellen+Francisco&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Special+Elite&family=Sue+Ellen+Francisco&display=swap');
 /* @import url('https://fonts.googleapis.com/css2?family=Special+Elite|Sue+Ellen+Francisco&display=swap'); */
 
+
 /* @import url('https://fonts.googleapis.com/css2?family=Special+Elite&display=swap'); */
-@import url('https://fonts.googleapis.com/css2?family=Sue+Ellen+Francisco&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Sue+Ellen+Francisco&display=swap'); */
 
 /* @font-face {
   font-family: 'Special Elite';
