--- a/Shadowrun5thEdition/Shadowrun5thEdition.pug
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.pug
@@ -229,7 +229,7 @@ include src/pug/_variables.pug
 									h3(data-i18n='skill') skill
 									select(name=`attr_skill` title=`${rangeRepeatingSection}_skill}` value='@{firearms}')
 										optgroup(label='Combat Skills' ) Combat Skills
-											option(data-i18n='firearms' value='@{firearms}' selected) Firearms Group
+											option(data-i18n='firearmsgroup' value='@{firearms}' selected) Firearms Group
 											option(data-i18n='automatics' value='@{automatics}') Automatics
 											option(data-i18n='archery' value='@{archery}') Archery
 											option(data-i18n='exoticrange' value='0') Exotic Range
