--- a/Shadowrun5thEdition/src/pug/_variables.pug
+++ b/Shadowrun5thEdition/src/pug/_variables.pug
@@ -11,7 +11,7 @@
 //- COMPLEX FORM ARRAY
 - const formTargets = ['device', 'file', 'host', 'ic', 'persona', 'self', 'sprite'];
 - const formDurations = ['extended', 'instant', 'permanent', 'other', 'sustained'];
-- const complexFormAttributes = ['complex form', 'target', 'duration','fade'];
+- const complexFormAttributes = ['complex form', 'target', 'duration','fadweaponModese'];
 
 //- AUGEMENATATIONS ARRAY
 - const augementations = ['Augmentations', 'Rating', 'Essence'];
