--- a/DnD_Original D&D/DnD_OD&D.css
+++ b/DnD_Original D&D/DnD_OD&D.css
@@ -7,13 +7,14 @@
 ****************/
 
 /* @import url('https://fonts.googleapis.com/css2?family=Special+Elite&family=Sue+Ellen+Francisco&display=swap'); */
-/* @import url('https://fonts.googleapis.com/css2?family=Special+Elite|Sue+Ellen+Francisco&display=swap'); */
+/* @import url('https://fonts.googleapis.com/css2?family=Sue+Ellen+Francisco|Special+Elite&display=swap'); */
+@import url('https://fonts.googleapis.com/css?family=Special+Elite|Sue+Ellen+Francisco&display=swap');
 
 
 /* @import url('https://fonts.googleapis.com/css2?family=Special+Elite&display=swap'); */
 /* @import url('https://fonts.googleapis.com/css2?family=Sue+Ellen+Francisco&display=swap'); */
 
-@font-face {
+/* @font-face {
   font-family: 'Special Elite';
   font-style: normal;
   font-weight: 400;
@@ -28,7 +29,7 @@
   font-display: swap;
   src: local('Sue Ellen Francisco '), local('SueEllenFrancisco'), url(https://fonts.gstatic.com/s/sueellenfrancisco/v10/wXK3E20CsoJ9j1DDkjHcQ5ZL8xRaxru9no1P23in5H8.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
+} */
 
 /* end Fonts */
 
@@ -39,8 +40,8 @@
 
 .sheet-odd {
 	width: 800px;
-  margin: 0;
-  padding: 10px 20px 20px;
+	margin: 0;
+	padding: 10px 20px 20px;
 	background: #FAFCFC;
 }
 
