[Ryuutama]: updating to google font and changing image urls to github

--- a/Ryuutama/Ryuutama.css
+++ b/Ryuutama/Ryuutama.css
@@ -1,8 +1,7 @@
-/* @import url('https://fonts.googleapis.com/css?family=Cormorant+Infant&display=swap'); */
+@import url('https://fonts.googleapis.com/css?family=Happy+Monkey|Fresca&display=swap');
 
 * {
-    font-family: 'Apple Chancery', 'Cormorant Infant', 'Palatino Linotype', arial;
-    letter-spacing: 1px;
+    font-family: 'Apple Chancery', 'Fresca', 'Happy Monkey', 'Palatino Linotype', arial;
 }
 
 * , *:before, *:after{ 
@@ -99,7 +98,7 @@ hr {
     background: #aaeeaa;
     padding: auto;
     justify-content: flex-start;
-    font-size: 15px;
+    font-size: 1.05em;
     font-weight: bold;
     border-radius: 4px;
     padding: 0 5px;
@@ -153,7 +152,7 @@ hr {
     text-align: center;
     width: 60px;
     height: 50px;
-    font-size: 2.5em;
+    font-size: 2em;
     margin: 6px 0 0 0;
 }
 
@@ -235,7 +234,7 @@ hr {
 .sheet-attrLabel {
     background: #aaeeaa;
     color: black;
-    font-size: 1.1em;
+    font-size: 1.05em;
     margin: 6px 0 3px 0;
     width: 98%;
     padding: 2px 5px;
@@ -378,7 +377,7 @@ input.sheet-overburdenPenalty {
     border-radius: 4px;
     padding: 2px 5px;
     width: 240px;
-    font-size: 15px;
+    font-size: 1.05em;
     height: 20px;
 }
 
