fixes for i18n, removed round borders from attributes

--- a/Forbidden_Lands/Forbidden_Lands.css
+++ b/Forbidden_Lands/Forbidden_Lands.css
@@ -241,6 +241,7 @@ hr.sheet-horizontal-rule::before {
 span.sheet-readonly,
 input.sheet-monster_only:checked~div.sheet-character .sheet-monster+span.sheet-monster.sheet-readonly {
   font-size: 2em;
+  font-style: italic;
   justify-self: center;
   line-height: .85em;
   width: 1em;
@@ -389,9 +390,6 @@ input.sheet-broken-agi[value="0"]~div .sheet-broken-agi.sheet-input-span,
 input.sheet-broken-wit[value="0"]~div .sheet-broken-wit.sheet-input-span,
 input.sheet-broken-emp[value="0"]~div .sheet-broken-emp.sheet-input-span {
   box-sizing: border-box;
-  color: #fff;
-  border: 2px dotted #fff;
-  background-color: #a60100;
 }
 
 /* Fake radio using xbox for Experience/Willpower */
@@ -1434,19 +1432,20 @@ input.sheet-dice_only:checked~div.sheet-character .sheet-box.sheet-character-ski
 }
 
 .sheet-input-span {
-  font-size: 1.75em;
-  font-weight: bold;
+  font-size: 2.5em;
   font-style: italic;
   z-index: 1;
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 0 0 0 -3px;
   padding: 0 0 5px 0;
   box-sizing: border-box;
   width: 34px;
   height: 34px;
   cursor: not-allowed;
   color: #333;
+  /*
   border: 1px solid #000;
   border-radius: 50%;
   background-color: #eee;
@@ -1454,6 +1453,7 @@ input.sheet-dice_only:checked~div.sheet-character .sheet-box.sheet-character-ski
   border-image-slice: 11;
   border-image-width: 6px;
   border-image-outset: 0px;
+  */
 }
 
 /* -----------------------------------Monster Tab layout */
@@ -3703,6 +3703,11 @@ input.sheet-dice-selection+span::before {
 .sheet-dice-artifact-rolls input.sheet-dice-selection+span::before {
   width: 40px;
   margin: 0;
+}
+
+span.sheet-artifact-die {
+  position: relative;
+  margin: 2% 3% 0 -20%;
 }
 
 input.sheet-dice-selection:hover+span::before {
