--- a/Forbidden_Lands/Forbidden_Lands.css
+++ b/Forbidden_Lands/Forbidden_Lands.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=IM+Fell+English|Inknut+Antiqua&display=swap');
+
 /* announcements */
 .sheet-announcements-show {
   font-size: 0.85em;
@@ -123,8 +125,6 @@ input.sheet-monster_only:checked~div.sheet-character input[type="checkbox"].shee
 }
 
 /* Text */
-
-@import url('https://fonts.googleapis.com/css?family=IM+Fell+English&display=swap');
 
 body {
   font-family: 'IM Fell English', 'Times New Roman', Times, serif;
@@ -781,6 +781,18 @@ input.sheet-tab.sheet-settings:checked::after {
   text-align: right;
 }
 
+span.sheet-logo-text {
+  font-family: 'Inknut Antiqua', serif;
+  font-size: 2.5em;
+  display: block;
+  line-height: 1.5em;
+}
+
+.sheet-logo-text:first-letter {
+  font-size: 1.5em;
+  vertical-align: bottom;
+}
+
 input {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   color: #000;
@@ -1401,8 +1413,8 @@ input.sheet-dice_only:checked~div.sheet-character .sheet-box.sheet-character-ski
 .sheet-attributes-grid>.sheet-attributes-box14 {
   font-size: 1.2em;
   justify-content: space-around;
-  width: 25%;
-  min-width: 4em;
+  width: 30%;
+  min-width: 4.5em;
 }
 
 .sheet-attributes-grid>.sheet-attributes-box3,
@@ -1414,7 +1426,7 @@ input.sheet-dice_only:checked~div.sheet-character .sheet-box.sheet-character-ski
 .sheet-attributes-grid>.sheet-attributes-box15,
 .sheet-attributes-grid>.sheet-attributes-box17 {
   justify-content: left;
-  width: 3em;
+  width: 2.5em;
 }
 
 .sheet-attributes-grid>.sheet-attributes-box4,
@@ -1454,6 +1466,13 @@ input.sheet-dice_only:checked~div.sheet-character .sheet-box.sheet-character-ski
   border-image-width: 6px;
   border-image-outset: 0px;
   */
+}
+
+.sheet-attributes-grid button[type="action"] {
+  width: 100%;
+  height: 1.65em;
+  padding: 0;
+  font-size: .875em;
 }
 
 /* -----------------------------------Monster Tab layout */
@@ -1748,7 +1767,7 @@ input.sheet-monster_only:checked~div.sheet-character .sheet-monster-attacks-grid
   padding: 2em 0 2em 0;
   grid-column-gap: 2px;
   grid-row-gap: 1em;
-  grid-template-columns: 5.75em 2.5em 3em auto 2.5em;
+  grid-template-columns: auto 2em 3em auto;
   grid-template-rows: auto auto auto;
   align-items: center;
 }
@@ -2116,7 +2135,7 @@ input.sheet-conditions-cold:checked~div>span.sheet-conditions-cold {
   grid-column: 1/23;
   grid-row-start: 3;
   display: grid;
-  grid-template-columns: 3em 3em 3em 5em 3em 4em 2em 3em 5em auto;
+  grid-template-columns: 4em 3em 4em 5em 3em 4em 2em 3em 6em auto;
   padding: 0 0 2px 0;
   grid-column-gap: 2px;
   justify-items: center;
@@ -2311,7 +2330,7 @@ input.sheet-conditions-cold:checked~div>span.sheet-conditions-cold {
   margin: 10px 0 10px 0;
   grid-area: sheet-dice-footer;
   grid-template-areas: "sheet-dice-footer-clear . sheet-dice-footer-api";
-  grid-template-columns: 10em auto 5em;
+  grid-template-columns: auto;
   grid-template-rows: 2.25em;
   justify-items: center;
 }
@@ -2806,7 +2825,7 @@ span.sheet-armor-box3.sheet-header {
   grid-column: 1/5;
   grid-column-gap: 0.25em;
   grid-row-start: 4;
-  grid-template-columns: 3em 3em auto 3em;
+  grid-template-columns: auto 3em auto 3em;
 }
 
 .sheet-gear-box7 {
@@ -2838,7 +2857,7 @@ span.sheet-armor-box3.sheet-header {
   display: grid;
   margin-top: 2px;
   grid-column-gap: 2px;
-  grid-template-columns: 8em 8em;
+  grid-template-columns: auto 8em;
 }
 
 .sheet-gear-box12 {
@@ -2934,7 +2953,7 @@ span.sheet-armor-box3.sheet-header {
   display: grid;
   height: 2em;
   margin-top: 5px;
-  grid-template-columns: 3em auto;
+  grid-template-columns: 2em auto;
 }
 
 .sheet-mount_gear-subgrid>.sheet-mount_gear-box11 {
@@ -2986,7 +3005,7 @@ span.sheet-armor-box3.sheet-header {
   grid-column: 1/5;
   grid-column-gap: 0.25em;
   grid-row-start: 4;
-  grid-template-columns: 3em 3em auto 3em;
+  grid-template-columns: auto 3em auto 3em;
 }
 
 .sheet-mount_gear-box7 {
