[Ryuutama]: update font choice for roll template

--- a/Ryuutama/Ryuutama.css
+++ b/Ryuutama/Ryuutama.css
@@ -1,7 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Fresca&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Fresca|Bellota&display=swap');
 
 * {
     font-family: 'Apple Chancery', 'Fresca', 'Palatino Linotype', arial;
+    letter-spacing: 0.5px
 }
 
 * , *:before, *:after{ 
@@ -524,7 +525,7 @@ input.sheet-tab5:checked ~ span.sheet-characterEquipment {
     background-repeat: repeat-y;
     min-height: 10px;
     background-size: 100% 34px;
-    font-family: 'Apple Chancery', 'Fresca', 'Palatino Linotype', cursive;
+    font-family: 'Apple Chancery', 'Bellota', 'Palatino Linotype', cursive;
     font-weight: bold;
 }
 
